<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:id="@+id/toolBarr">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Đăng món "
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:inputType="textPersonName|textCapWords"

            />
    </androidx.appcompat.widget.Toolbar>
    <TableRow
        android:id="@+id/hr"
        android:layout_below="@+id/toolBarr"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/lightgray" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/hr">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:padding="10dp"

            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/shape_rect02"
                android:id="@+id/tvCategory"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Thể loại món:"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:inputType="textCapSentences"
                android:padding="12dp" />

            <Spinner
                android:id="@+id/spinnerID"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginLeft="-2dp"
                android:layout_toRightOf="@+id/tvCategory" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DishName"
                android:layout_below="@+id/tvCategory"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:paddingTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tên món"
                    android:background="@drawable/shape_rect02"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DishDetail"
                android:layout_below="@id/Linear4">
                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/shape_rect02"
                    android:gravity="top|start"
                    android:drawableTint="@color/colorGray02"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Mô tả"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DishPrice"
                android:layout_below="@id/DishName">
                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/shape_rect02"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Giá"
                    android:inputType="numberDecimal"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/DishPrice"
                android:layout_marginBottom="10dp"
                android:id="@+id/Linear4"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:background="@drawable/shape_rect02"
                    android:id="@+id/tvimage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:text="Hình ảnh"
                    android:textSize="18dp"
                    android:layout_marginEnd="5dp"
                    android:padding="12dp" />
                <ImageButton
                    android:background="@drawable/shape_rect02"
                    android:id="@+id/imageupload"
                    android:layout_width="400dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:hint="Tỉ lệ %"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:inputType="textCapSentences"
                    android:contentDescription="Mô tả về hình ảnh"
                    android:padding="12dp" />
            </LinearLayout>

            <!--Whether or not product on discount-->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/DishAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/DishDetail"
                android:padding="5dp"

                android:layout_marginBottom="10dp"
                android:text="Còn món" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/DiscountSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/DishAvailable"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:text="Giảm giá?" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/DiscountSwitch"
                android:layout_marginBottom="10dp"
                android:id="@+id/linear2"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/DishDiscount">
                    <com.google.android.material.textfield.TextInputEditText
                        android:background="@drawable/shape_rect02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:hint="Giảm còn"
                        android:layout_marginEnd="5dp"
                        android:inputType="numberDecimal"
                        android:padding="12dp" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:background="@drawable/shape_rect02"
                    android:id="@+id/DishCountPercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Tỉ lệ %"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:inputType="textCapSentences"
                    android:padding="12dp" />
            </LinearLayout>

            <Button
                android:background="@drawable/button_shape"
                android:text="Đăng món"
                android:textAllCaps="false"
                android:id="@+id/PostDish"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingVertical="13dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear2"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>