<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/SwipeRevealLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:mode="same_level"
    app:dragEdge="right"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
...
            android:background="@color/Red"
        android:text="Xóa"
            android:gravity="center"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/CateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="100dp"
...
